[Blink] Fix under-invalidation for sticky descendants of non-composited scoller

Sticky descendants need to re-compute paint offset upon scrolled. Beside
fixing the under-invalidation, this CL also reduced the strength of the
invalidation so instead of full paint invalidation it only needs a paint
offset check.

BUG=874675

Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I0e4ab3b667a6f06bfe3c584285dc2e31fa4ea7c2
Reviewed-on: https://chromium-review.googlesource.com/1182668
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585370}
Former-commit-id: 47afbe8ea56346b06f85309a351eb9de841e8c12